wip: layout entre em contato

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="container-max-width">
+  <app-entre-em-contato></app-entre-em-contato>
+</div>
 <p style="color: red">home works!</p>
 <p>home works!</p>
 <p>home works!</p>
