--- a/src/app/components/entre-em-contato/entre-em-contato.component.scss
+++ b/src/app/components/entre-em-contato/entre-em-contato.component.scss
@@ -4,8 +4,8 @@ form {
 }
 
 h4 {
-  margin-bottom: 12px;
   font-size: 20px;
+  margin-bottom: 12px;
 }
 
 .form-inputs {
@@ -25,6 +25,10 @@ h4 {
   background: #21252a;
 }
 
+img {
+  max-height: 428px;
+}
+
 @media screen and (max-width: 767px) {
   h1 {
     font-size: 24px;
@@ -36,6 +40,6 @@ h4 {
   }
 
   button {
-    font-size: 20px;
+    font-size: 20px !important;
   }
 }
