--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .container-max-width {
-  width: 1440px;
+  width: 90rem;
   margin: 0 auto;
   padding: 0 48px;
   max-width: 100%;
@@ -28,11 +28,4 @@ body {
 .flex-vcenter {
   display: flex;
   align-items: center;
-}
-
-.main-container {
-  max-width: 90rem;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
 }
