feat: layout como funciona

--- a/src/app/components/entre-em-contato/entre-em-contato.component.html
+++ b/src/app/components/entre-em-contato/entre-em-contato.component.html
@@ -17,7 +17,7 @@
         placeholder="Telefone/Whatsapp"
       />
 
-      <button type="button" class="green-btn mb-176">Inscreva-se</button>
+      <button type="button" class="black-btn">Inscreva-se</button>
     </form>
   </div>
 
