--- a/src/app/components/entre-em-contato/entre-em-contato.component.scss
+++ b/src/app/components/entre-em-contato/entre-em-contato.component.scss
@@ -15,14 +15,8 @@ h4 {
   border: 3.5px solid #21252a;
 }
 
-.form .green-btn {
+.black-btn {
   height: 54px;
-  color: #fff;
-  font-size: 24px;
-  font-weight: 700;
-  border: none;
-  border-radius: 8px;
-  background: #21252a;
 }
 
 img {
@@ -37,9 +31,5 @@ img {
   h4 {
     font-size: 16px;
     font-weight: 400;
-  }
-
-  button {
-    font-size: 20px !important;
   }
 }
