--- a/src/app/components/accordion/accordion.component.html
+++ b/src/app/components/accordion/accordion.component.html
@@ -1,1 +1,79 @@
-<p>accordion works!</p>
+
+<div class="container-max-width">
+  <h1 class="title flex-center">Perguntas frequentes</h1>
+  <div class="d-flex acc-gap">
+    <div class="row m-0 p-0">
+      <div class="p-0 col-auto d-none d-md-block py-2">
+        <img src="assets/icons/paper.svg" class="acc-icons">
+      </div>
+      <div class="p-0 col">
+        <div class="accordion accordion-flush" id="accordionFlush">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapse-one" aria-expanded="false" aria-controls="flush-collapse">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt suscipit doloribu
+              </button>
+            </h2>
+            <div id="flush-collapse-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlush">
+
+              <div class="accordion-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque consequuntur tempora quisquam vero excepturi magni est nesciunt, expedita praesentium doloribus dignissimos inventore eum in repellendus ipsam fugit neque sed obcaecati.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row m-0 p-0">
+      <div class="p-0 col-auto d-none d-md-block py-2">
+        <img src="assets/icons/paper.svg" class="acc-icons">
+      </div>
+      <div class="p-0 col">
+        <div class="accordion accordion-flush" id="accordionFlush">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapse-two" aria-expanded="false" aria-controls="flush-collapse">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt suscipit doloribu
+              </button>
+            </h2>
+            <div id="flush-collapse-two" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlush">
+
+              <div class="accordion-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque consequuntur tempora quisquam vero excepturi magni est nesciunt, expedita praesentium doloribus dignissimos inventore eum in repellendus ipsam fugit neque sed obcaecati.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row m-0 p-0">
+      <div class="p-0 col-auto d-none d-md-block py-2">
+        <img src="assets/icons/paper.svg" class="acc-icons">
+      </div>
+      <div class="p-0 col">
+        <div class="accordion accordion-flush" id="accordionFlush">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapse-three" aria-expanded="false" aria-controls="flush-collapse">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt suscipit doloribu
+              </button>
+            </h2>
+            <div id="flush-collapse-three" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlush">
+
+              <div class="accordion-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque consequuntur tempora quisquam vero excepturi magni est nesciunt, expedita praesentium doloribus dignissimos inventore eum in repellendus ipsam fugit neque sed obcaecati.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
