--- a/src/app/layouts/layout.component.html
+++ b/src/app/layouts/layout.component.html
@@ -6,5 +6,6 @@
   <main class="main-content" [ngClass]="{ 'toggle-main ': isToggle }">
     <app-topbar (toggleSidebar)="isToggle = !isToggle"></app-topbar>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </main>
 </div>
