--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Operative</a>
+    <div>
+      <img src="assets/images/exemplo-logo2.png" alt="">
+      <a class="navbar-brand" href="#">Operative</a>
+    </div>
     <button
       class="navbar-toggler"
       type="button"
