--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="container-max-width">
-  <div class="w-100" style="border: 1px solid red"></div>
+  <div class="w-100" style="border: 10px solid red"></div>
+  <div style="height: 100%"></div>
 </div>
