--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-/* You can add global styles to this file, and also import other style files */
-
 body {
   -webkit-font-smoothing: antialiased;
   background: #fcfcfc;
@@ -35,4 +32,27 @@ body {
   margin: 0 auto;
   padding: 20px;
   text-align: center;
+}
+
+.btn-unstyled {
+  font-size: 1rem;
+  display: inline-block;
+  font-weight: 700;
+  line-height: 1.25;
+  text-align: center;
+  vertical-align: middle;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  outline: none;
+  user-select: none;
+  touch-action: manipulation;
+}
+
+.offcanvas {
+  // background: rgba(0, 0, 0, 0.2);
+  // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  // backdrop-filter: blur(5px);
+  // -webkit-backdrop-filter: blur(5px);
+  // border: 1px solid rgba(0, 0, 0, 0.3);
 }
