--- a/src/app/components/carrossel/carrossel.component.html
+++ b/src/app/components/carrossel/carrossel.component.html
@@ -5,35 +5,52 @@
       direction="horizontal"
       pagination="true"
       pagination-clickable="true"
-      autoplay-delay="2500"
-      autoplay-disable-on-interaction="false"
-    >
+      slides-per-view="2"
+    space-between="30"
+    free-mode="true"
+      >
+      <!-- autoplay-delay="2500"
+      autoplay-disable-on-interaction="false" -->
       <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+        <div class="info">
+          <div class="content-comment">
+            <div class="comment"></div>
+          </div>
+        </div>
+
       </swiper-slide>
+
       <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+        <div class="info">
+          <div class="content-comment">
+            <div class="comment"></div>
+          </div>
+        </div>
+
       </swiper-slide>
+
       <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+        <div class="info">
+          <div class="content-comment">
+            <div class="comment"></div>
+          </div>
+        </div>
+
       </swiper-slide>
+
       <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+        <div class="info">
+          <div class="content-comment">
+            <div class="comment"></div>
+          </div>
+        </div>
+
       </swiper-slide>
+
       <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-      </swiper-slide>
-      <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-      </swiper-slide>
-      <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-      </swiper-slide>
-      <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-      </swiper-slide>
-      <swiper-slide>
-        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
+        <div class="info">
+          <h1>Teste</h1>
+        </div>
       </swiper-slide>
     </swiper-container>
   </div>
