--- a/src/app/components/carrossel/carrossel.component.scss
+++ b/src/app/components/carrossel/carrossel.component.scss
@@ -21,7 +21,7 @@ swiper-slide img {
 
 swiper-container {
   width: 100%;
-  height: 300px;
+  height: 765px;
   margin-left: auto;
   margin-right: auto;
   background: transparent;
@@ -31,4 +31,11 @@ swiper-slide {
   background-size: cover;
   background-position: center;
   background: transparent;
+}
+
+.info {
+  width: 100%;
+  height: 100%;
+  padding: 2.5rem;
+  background: red;
 }
