--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import url("./assets/scss/_variables.scss");
+
 body {
   -webkit-font-smoothing: antialiased;
   background: #fcfcfc;
@@ -58,9 +60,5 @@ body {
 }
 
 .offcanvas {
-  // background: rgba(0, 0, 0, 0.2);
-  // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  // backdrop-filter: blur(5px);
-  // -webkit-backdrop-filter: blur(5px);
-  // border: 1px solid rgba(0, 0, 0, 0.3);
+  background: #f5f6f7;
 }
