--- a/src/app/layouts/topbar/topbar.component.scss
+++ b/src/app/layouts/topbar/topbar.component.scss
@@ -1,52 +1,68 @@
-.navbar {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-}
-
 .offcanvas-menu {
   .nav-item {
     display: flex;
     align-items: center;
-    padding: 15px;
+    padding: 0.9375rem;
     border-radius: 0;
-    height: 60px;
-    color: #000;
+    height: 3.75rem;
+    color: #3b3b3b;
     font-weight: 400;
     cursor: pointer;
 
     &:hover {
-      background: #e7f6f8;
-      color: #00acc4;
-      border-radius: 8px;
+      background: var(--light-gray);
+      color: var(--text-dark);
+      border-radius: 0.5rem;
       .nav-link {
-        color: #00acc4;
+        color: var(--text-dark);
       }
     }
   }
 
   .nav-link {
-    color: #000;
+    color: var(--text-dark);
 
     &:hover {
-      color: #00acc4;
+      color: var(--text-dark);
     }
   }
 
   .nav-link + .nav-item :hover {
-    color: #00acc4;
+    color: var(--text-dark);
   }
 }
 
 .close {
-  font-size: 22px;
-  padding: 6px 14px;
+  font-size: 1.375rem;
+  padding: 0.375rem 0.875rem;
+
   &:hover {
-    background-color: #e7f6f8;
-    border-radius: 8px;
-    color: #00acc4;
+    background-color: var(--light-gray);
+    border-radius: 0.5rem;
+    color: var(--text-dark);
+  }
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    max-height: 2.5rem;
+  }
+}
+
+.navbar-toggler {
+  width: 2.8125rem;
+  border: none !important;
+  padding: 0.5rem 0.75rem;
+  box-shadow: none;
+
+  .fa-bars-staggered:before {
+    content: "\f0c9";
+  }
+  .fa-bars:before {
+    content: "\f550";
   }
 }
