wip: estilizar carrossel

--- a/src/app/components/carrossel/carrossel.component.html
+++ b/src/app/components/carrossel/carrossel.component.html
@@ -3,18 +3,25 @@
     <swiper-container
       class="mySwiper"
       direction="horizontal"
-      pagination="true"
-      pagination-clickable="true"
-      slides-per-view="2"
+
+      slides-per-view="2.5"
     space-between="30"
     free-mode="true"
+    centered-slides="true"
+    autoplay-delay="3000"
+    autoplay-disable-on-interaction="false"
+    loop="true"
       >
-      <!-- autoplay-delay="2500"
-      autoplay-disable-on-interaction="false" -->
       <swiper-slide>
         <div class="info">
           <div class="content-comment">
-            <div class="comment"></div>
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+              <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
+            </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
         </div>
 
@@ -23,7 +30,13 @@
       <swiper-slide>
         <div class="info">
           <div class="content-comment">
-            <div class="comment"></div>
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+              <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
+            </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
         </div>
 
@@ -32,7 +45,13 @@
       <swiper-slide>
         <div class="info">
           <div class="content-comment">
-            <div class="comment"></div>
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+              <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
+            </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
         </div>
 
@@ -41,7 +60,13 @@
       <swiper-slide>
         <div class="info">
           <div class="content-comment">
-            <div class="comment"></div>
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+              <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
+            </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
         </div>
 
@@ -49,9 +74,20 @@
 
       <swiper-slide>
         <div class="info">
-          <h1>Teste</h1>
+          <div class="content-comment">
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+              <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
+            </div>
+            <h4 class="city">Cidade/UF</h4>
+          </div>
         </div>
+
       </swiper-slide>
+
+
     </swiper-container>
   </div>
 </div>
