--- a/src/app/components/carrossel/carrossel.component.scss
+++ b/src/app/components/carrossel/carrossel.component.scss
@@ -4,20 +4,20 @@ swiper-container {
 }
 
 swiper-slide {
-  text-align: center;
+  // text-align: center;
   font-size: 18px;
   background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
 }
 
-swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+// swiper-slide img {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
 
 swiper-container {
   width: 100%;
@@ -36,6 +36,43 @@ swiper-slide {
 .info {
   width: 100%;
   height: 100%;
-  padding: 2.5rem;
-  background: red;
+  display: flex;
+  align-items: center;
+}
+
+.content-comment {
+  padding: 24px;
+  border-radius: 1.5rem;
+  background: #21252a;
+  justify-content: flex-start;
+}
+
+.comment {
+  border-radius: 8px;
+  height: 378px;
+  font-size: 22px;
+  padding: 24px 16px;
+  cursor: default;
+  text-align: center;
+  background: #d9d9d9;
+}
+
+.name {
+  color: #fff;
+  text-align: center;
+}
+
+.job {
+  color: #fff;
+  text-align: center;
+}
+
+.city {
+  color: #d9d9d9;
+  text-align: center;
+  margin: 30px 0 0;
+}
+
+.aspas {
+  height: 35px;
 }
