--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -12,7 +12,9 @@
         </li>
 
         <li class="nav-item align-self-center ms-3">
-          <button class="btn btn-sm btn-primary">Exemple button</button>
+          <button class="btn btn-sm btn-primary">
+            <div class="d-flex align-items-center">Exemple button</div>
+          </button>
         </li>
       </ul>
     </div>
