--- a/src/app/components/carrossel/carrossel.component.scss
+++ b/src/app/components/carrossel/carrossel.component.scss
@@ -1,3 +1,7 @@
+.my-carousel {
+  height: 50rem;
+}
+
 swiper-container {
   width: 100%;
   height: 100%;
@@ -19,16 +23,59 @@ swiper-slide img {
   object-fit: cover;
 }
 
+swiper-slide {
+  background-size: cover;
+  background-position: center;
+  background: transparent;
+}
+
 swiper-container {
   width: 100%;
   height: 300px;
   margin-left: auto;
   margin-right: auto;
   background: transparent;
+  &::part(bullet),
+  &::part(bullet-active) {
+    background: white;
+  }
 }
 
-swiper-slide {
-  background-size: cover;
-  background-position: center;
-  background: transparent;
+.carousel-container {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  .carousel-buttons-container {
+    display: none;
+    opacity: 0;
+    .carousel-buttons {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 999;
+      width: 96%;
+      .swiper-button {
+        width: 1.875rem;
+        height: 1.875rem;
+        border-radius: 50%;
+        text-align: center;
+        vertical-align: middle;
+        border: 0;
+        padding: 0;
+        outline: none;
+        user-select: none;
+        touch-action: manipulation;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        color: white;
+        font-size: 12px;
+      }
+    }
+  }
+  &:hover .carousel-buttons-container {
+    display: flex;
+    opacity: 1;
+  }
 }
