--- a/src/app/components/carrossel/carrossel.component.html
+++ b/src/app/components/carrossel/carrossel.component.html
@@ -1,102 +1,100 @@
 <div class="row p-0 m-0 carousel-container">
-    <div class="col-12 p-0">
-      <swiper-container
-        class="mySwiper"
-        direction="horizontal"
-
-        slides-per-view="2.5"
-      space-between="30"
-      free-mode="true"
-      centered-slides="true"
-      autoplay-delay="3000"
-      autoplay-disable-on-interaction="false"
-      loop="true"
-      #swiper
-        >
-        <swiper-slide>
-          <div class="info">
-            <div class="content-comment">
-              <h3 class="name">Nome</h3>
-              <h4 class="job">Profissão</h4>
-                <img src="assets/icons/aspas.svg" class="aspas mb-4">
-              <div class="comment">
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
-              </div>
-              <h4 class="city">Cidade/UF</h4>
+  <div class="col-12 p-0" class="swiper">
+    <swiper-container class="mySwiper">
+      <swiper-slide>
+        <div class="info">
+          <div class="content-comment">
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+            <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia
+              tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi
+              provident dignissimos."
             </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
+        </div>
 
-        </swiper-slide>
+      </swiper-slide>
 
-        <swiper-slide>
-          <div class="info">
-            <div class="content-comment">
-              <h3 class="name">Nome</h3>
-              <h4 class="job">Profissão</h4>
-                <img src="assets/icons/aspas.svg" class="aspas mb-4">
-              <div class="comment">
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
-              </div>
-              <h4 class="city">Cidade/UF</h4>
+      <swiper-slide>
+        <div class="info">
+          <div class="content-comment">
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+            <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia
+              tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi
+              provident dignissimos."
             </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
+        </div>
 
-        </swiper-slide>
+      </swiper-slide>
 
-        <swiper-slide>
-          <div class="info">
-            <div class="content-comment">
-              <h3 class="name">Nome</h3>
-              <h4 class="job">Profissão</h4>
-                <img src="assets/icons/aspas.svg" class="aspas mb-4">
-              <div class="comment">
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
-              </div>
-              <h4 class="city">Cidade/UF</h4>
+      <swiper-slide>
+        <div class="info">
+          <div class="content-comment">
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+            <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia
+              tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi
+              provident dignissimos."
             </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
+        </div>
 
-        </swiper-slide>
+      </swiper-slide>
 
-        <swiper-slide>
-          <div class="info">
-            <div class="content-comment">
-              <h3 class="name">Nome</h3>
-              <h4 class="job">Profissão</h4>
-                <img src="assets/icons/aspas.svg" class="aspas mb-4">
-              <div class="comment">
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
-              </div>
-              <h4 class="city">Cidade/UF</h4>
+
+      <swiper-slide>
+        <div class="info">
+          <div class="content-comment">
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+            <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia
+              tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi
+              provident dignissimos."
             </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
+        </div>
 
-        </swiper-slide>
+      </swiper-slide>
 
-        <swiper-slide>
-          <div class="info">
-            <div class="content-comment">
-              <h3 class="name">Nome</h3>
-              <h4 class="job">Profissão</h4>
-                <img src="assets/icons/aspas.svg" class="aspas mb-4">
-              <div class="comment">
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi provident dignissimos."
-              </div>
-              <h4 class="city">Cidade/UF</h4>
+      <swiper-slide>
+        <div class="info">
+          <div class="content-comment">
+            <h3 class="name">Nome</h3>
+            <h4 class="job">Profissão</h4>
+            <img src="assets/icons/aspas.svg" class="aspas mb-4">
+            <div class="comment">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nisi, iste porro earum sit impedit officia
+              tempora pariatur, consectetur omnis ad aspernatur molestiae totam vitae! Incidunt consequatur commodi
+              provident dignissimos."
             </div>
+            <h4 class="city">Cidade/UF</h4>
           </div>
+        </div>
 
-        </swiper-slide>
+      </swiper-slide>
 
 
-      </swiper-container>
+    </swiper-container>
+
 
   </div>
 
-  <div class="carousel-buttons-container">
-    <div
-      class="d-flex align-items-center justify-content-between carousel-buttons"
-    >
+  <!-- <div class="carousel-buttons-container">
+    <div class="d-flex align-items-center justify-content-between carousel-buttons">
       <button class="swiper-button" (click)="swiper.swiper.slidePrev()">
         <i class="fa-solid fa-chevron-left"></i>
       </button>
@@ -104,5 +102,5 @@
         <i class="fa-solid fa-chevron-right"></i>
       </button>
     </div>
-  </div>
+  </div> -->
 </div>
