feat: carrossel responsivo

--- a/src/app/components/carrossel/carrossel.component.html
+++ b/src/app/components/carrossel/carrossel.component.html
@@ -1,6 +1,6 @@
 <div class="row p-0 m-0 carousel-container">
   <div class="col-12 p-0" class="swiper">
-    <swiper-container class="mySwiper">
+    <swiper-container init="false" #swiper>
       <swiper-slide>
         <div class="info">
           <div class="content-comment">
@@ -93,7 +93,7 @@
 
   </div>
 
-  <!-- <div class="carousel-buttons-container">
+  <div class="carousel-buttons-container">
     <div class="d-flex align-items-center justify-content-between carousel-buttons">
       <button class="swiper-button" (click)="swiper.swiper.slidePrev()">
         <i class="fa-solid fa-chevron-left"></i>
@@ -102,5 +102,5 @@
         <i class="fa-solid fa-chevron-right"></i>
       </button>
     </div>
-  </div> -->
+  </div>
 </div>
