--- a/src/app/components/carrossel/carrossel.component.scss
+++ b/src/app/components/carrossel/carrossel.component.scss
@@ -66,7 +66,7 @@ swiper-container {
         outline: none;
         user-select: none;
         touch-action: manipulation;
-        background: rgba(255, 255, 255, 0.2);
+        background: #45292933;
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(5px);
         color: white;
@@ -95,12 +95,12 @@ swiper-container {
 }
 
 .comment {
-  border-radius: 8px;
   height: 378px;
   font-size: 22px;
-  padding: 24px 16px;
   cursor: default;
+  padding: 24px 16px;
   text-align: center;
+  border-radius: 8px;
   background: #d9d9d9;
 }
 
@@ -115,11 +115,35 @@ swiper-container {
 }
 
 .city {
+  margin: 30px 0 0;
   color: #d9d9d9;
   text-align: center;
-  margin: 30px 0 0;
 }
 
 .aspas {
   height: 35px;
+}
+
+@media screen and (max-width: 650px) {
+  .name {
+    font-size: 20px;
+  }
+
+  .job,
+  .city {
+    font-size: 18px;
+  }
+
+  .comment {
+    font-size: 16px;
+    padding: 20px 14px;
+  }
+
+  .aspas {
+    height: 20px;
+  }
+
+  .mb-4 {
+    margin-bottom: 12px !important;
+  }
 }
